adds query top x (percent) of a course
